--- a/style.css
+++ b/style.css
@@ -108,7 +108,8 @@ main hr {
 footer {
   background-color: rgb(19, 0, 129);
   color: azure;
-  height: 220px;
+  min-height: 220px;
+  padding: 20px 10px;
 }
 .footer {
   display: flex;
@@ -198,17 +199,20 @@ footer {
   }
 
   .leftsection {
-    font-size: 2.2rem;
+    font-size: 1.5rem;
     margin: 20px 0;
     margin-left: 0;
     text-align: center;
   }
 
   .rightsection img {
-    max-width: 220px;
+    width: 100%;
+    max-width: 250px;
     height: auto;
     margin-top: 0;
-    margin-left: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
   }
 
   nav {
@@ -230,10 +234,8 @@ footer {
   .thirdsection,
   .fourthsection,
   .educationsection {
-    font-size: 1.2rem;
-    margin: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    font-size: 1.1rem;
+    margin: 10px;
   }
 
   .secondsection p {
@@ -244,7 +246,8 @@ footer {
 
   .project1 {
     width: 100%;
-    margin: 10px 0;
+    margin: auto;
+    max-width: 330px;
   }
 
   .footer {
@@ -290,6 +293,24 @@ footer {
     margin: 6px 0; /* Reduce vertical spacing */
     font-size: 1rem;
     text-align: center;
+  }
+  footer {
+    padding: 30px 10px;
+    height: auto;
+  }
+
+  .fourthsection input,
+  .fourthsection textarea {
+    width: 100%;
+    padding: 12px;
+  }
+
+  .leftsection {
+    margin: 10px;
+  }
+
+  .projectcontainer {
+    padding: 10px;
   }
 }
 
@@ -349,7 +370,7 @@ footer {
   margin-left: 60px;
 }
 .sociallinks a {
-  margin: 20px;
+  margin-left: 100px;
   text-decoration: none;
   font-weight: bold;
   color: rgb(93, 0, 31);
