--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ html {
 }
 
 body {
-  background-color: rgb(145, 144, 144);
+  background: linear-gradient(to right, #f9fafb 40%, #f4b731 100%);
+
   color: rgb(3, 0, 0);
 }
 nav {
@@ -15,8 +16,8 @@ nav {
   align-items: center;
   display: flex;
   height: 70px;
-  color: azure;
-  background-color: rgb(19, 0, 129);
+  color: rgb(0, 0, 0);
+  background: linear-gradient(to right, #f9fafb 40%, #f4b731 100%);
 }
 nav ul {
   display: flex;
@@ -29,7 +30,7 @@ nav ul li {
 nav ul a {
   font-size: 1.3rem;
   text-decoration: none;
-  color: azure;
+  color: rgb(0, 14, 14);
 }
 
 nav ul a:hover {
@@ -50,6 +51,7 @@ nav ul a:hover {
   font-size: 3rem;
   margin: 30px 0;
   margin-left: 80px;
+  color: #1f2937;
 }
 .rightsection img {
   width: 300px;
@@ -105,40 +107,7 @@ main hr {
   margin: 40px 0;
   margin-left: 80px;
 }
-footer {
-  background-color: rgb(19, 0, 129);
-  color: azure;
-  min-height: 220px;
-  padding: 20px 10px;
-}
-.footer {
-  display: flex;
-  margin: 50px 90px;
-  justify-content: space-around;
-  align-items: center;
-  color: azure;
-}
-.first-footer {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: larger;
-  font-weight: bolder;
-  align-items: center;
-  text-align: center;
-}
-.second-footer ul {
-  list-style: none;
-  display: block;
-}
-.second-footer ul li {
-  text-decoration: none;
-  margin: 20px;
-}
-.second-footer a {
-  text-decoration: none;
-  color: azure;
-  margin: 10px;
-  font-weight: bold;
-}
+
 .projectcontainer {
   display: flex;
   flex-wrap: wrap;
@@ -203,6 +172,7 @@ footer {
     margin: 20px 0;
     margin-left: 0;
     text-align: center;
+    background: linear-gradient(to right, #f9fafb 40%, #f4b731 100%);
   }
 
   .rightsection img {
@@ -250,13 +220,6 @@ footer {
     max-width: 330px;
   }
 
-  .footer {
-    flex-direction: column;
-    text-align: center;
-    gap: 20px;
-    margin: 30px 20px;
-  }
-
   .inputform {
     flex-direction: column;
     gap: 15px;
@@ -293,10 +256,6 @@ footer {
     margin: 6px 0; /* Reduce vertical spacing */
     font-size: 1rem;
     text-align: center;
-  }
-  footer {
-    padding: 30px 10px;
-    height: auto;
   }
 
   .fourthsection input,
