--- a/style.css
+++ b/style.css
@@ -5,19 +5,27 @@
 html {
   scroll-behavior: smooth;
 }
+:root {
+  --dark-bg: #0a0a0a;
+  --darker-bg: #050505;
+  --accent: #2ecc71;
+  --accent-glow: rgba(46, 204, 113, 0.4);
+  --text: rgb(57, 244, 15);
+}
 
 body {
-  background: linear-gradient(to right, #f9fafb 40%, #f4b731 100%);
-
-  color: rgb(3, 0, 0);
+  background-color: var(--dark-bg);
+  color: var(--text);
+  line-height: 1.6;
+  overflow-x: hidden;
 }
+
 nav {
   justify-content: space-around;
   align-items: center;
   display: flex;
   height: 70px;
-  color: rgb(0, 0, 0);
-  background: linear-gradient(to right, #f9fafb 40%, #f4b731 100%);
+  color: rgb(57, 244, 15);
 }
 nav ul {
   display: flex;
@@ -28,13 +36,14 @@ nav ul li {
   margin: 0 30px;
 }
 nav ul a {
+  font-weight: bolder;
   font-size: 1.3rem;
   text-decoration: none;
-  color: rgb(0, 14, 14);
+  color: rgb(57, 244, 15);
 }
 
 nav ul a:hover {
-  color: rgb(101, 115, 9);
+  color: rgb(88, 0, 93);
 }
 .left {
   font-size: 2rem;
@@ -51,7 +60,7 @@ nav ul a:hover {
   font-size: 3rem;
   margin: 30px 0;
   margin-left: 80px;
-  color: #1f2937;
+  color: #2a6cc8;
 }
 .rightsection img {
   width: 300px;
@@ -62,23 +71,23 @@ nav ul a:hover {
 }
 
 .name {
-  color: rgb(36, 1, 79);
+  color: rgb(178, 238, 36);
 }
 .intro {
   font-size: 2rem;
   margin-top: 25px;
-  color: rgb(103, 6, 54);
+  color: rgb(252, 48, 150);
 }
 #element {
   font-size: 2rem;
   margin-top: 25px;
-  color: rgb(14, 70, 1);
+  color: rgb(57, 244, 15);
 }
 main hr {
   border: 0;
-  background-color: blueviolet;
+  background-color: rgb(195, 156, 232);
   height: 1.2px;
-  margin: 40px 85px;
+  margin: 30px 85px;
 }
 .secondsection {
   font-size: 2rem;
@@ -89,12 +98,13 @@ main hr {
   padding: 5px;
   margin-right: 15px;
   gap: 10px;
-  color: rgb(87, 4, 63);
+  color: rgb(253, 31, 190);
   line-height: 1;
   font-size: 1.7rem;
 }
 .secondsection h2 {
   margin-bottom: 20px;
+  color: rgb(57, 244, 15);
 }
 .thirdsection {
   font-size: 2rem;
@@ -129,7 +139,7 @@ main hr {
 }
 .project1 h3 {
   font-size: 28px;
-  color: #1e3a8a;
+  color: #305ddc;
   margin-bottom: 12px;
   text-align: center;
 }
@@ -172,7 +182,6 @@ main hr {
     margin: 20px 0;
     margin-left: 0;
     text-align: center;
-    background: linear-gradient(to right, #f9fafb 40%, #f4b731 100%);
   }
 
   .rightsection img {
@@ -316,9 +325,10 @@ main hr {
   margin: 7px;
   margin-left: 80px;
   font-size: 1.7rem;
+  color: rgb(253, 31, 190);
 }
 .skill strong {
-  color: rgb(16, 2, 64);
+  color: rgb(67, 15, 238);
 }
 .sociallinks {
   margin: 0px;
@@ -332,7 +342,7 @@ main hr {
   margin-left: 100px;
   text-decoration: none;
   font-weight: bold;
-  color: rgb(93, 0, 31);
+  color: rgb(250, 34, 106);
 }
 .sociallinks a:hover {
   color: #1e3a8a;
@@ -351,6 +361,6 @@ main hr {
 
 .educationsection li {
   font-size: 1.7rem;
-  color: rgb(24, 0, 75);
+  color: rgb(253, 31, 190);
   margin: 15px 0;
 }
